tests/snapshots/examples_fixtures/type_classes__console_logger_example.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/console_logger_example.flx
== compile ==
failed (compile)
== diagnostics ==
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: println.

  examples/type_classes/ConsoleLoggerExample/App/Main.flx:7:9
  |
7 |         Logger.log(StdLog.stdout(), "ok") handle Console {
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         --------------------------------- handled expression

Hint:
  Add 1 arm(s) to the handle block:

    println(resume, _arg1) -> resume(())

Tip: `resume(())` consumes the operation and discards its effect; use it when the handler only cares about observing the call.
== stdout ==
<not executed>
